--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "jest": "29.5.0",
     "mini-css-extract-plugin": "2.7.5",
     "prettier": "2.8.7",
+    "sass": "^1.90.0",
+    "sass-loader": "^16.0.5",
     "start-server-and-test": "2.0.0",
     "terser-webpack-plugin": "5.3.7",
     "url-loader": "4.1.1",
