--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm install --frozen-lockfile
 
       - name: Run ESLint
-        run: npm lint
+        run: npm run lint
 
   # 2. Build (Webpack)
   build:
