--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
           node-version: 20
           cache: 'npm'
 
-      - run: npm
+      - run: npm install --frozen-lockfile
       - run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
